# tlenek

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  security-audit.yml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  test_framework.rs  vga_text.rs
tests/: basic_boot.rs  stack_overflow.rs
