[package]
name = "tlenek"
version = "0.1.0-alpha.2"
authors = ["Max Gilmour <mgilmour@maxgmr.ca>"]
edition = "2021"
description = "A bare-bones operating system"
# documentation - default docs.rs page
readme = "README.md"
homepage = "https://github.com/maxgmr/tlenek"
repository = "https://github.com/maxgmr/tlenek"
license = "GPL-3.0"
keywords = ["os"]
categories = []
# build - default automatic detection
exclude = []
include = []

[lib]
name = "tlenek_core"
path = "src/lib.rs"

[[bin]]
name = "tlenek_bin"
path = "src/main.rs"

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"
